<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical" >
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_fc" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baslik"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                         />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/editKullaniciAdi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_user"
                            android:ems="10"
                            android:hint="@string/kullaniciad"
                            android:textColor="#fff" >

                            <requestFocus />
                        </EditText>

                        <EditText
                            android:id="@+id/editSifre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_password"
                            android:ems="10"
                            android:hint="@string/sifre"
                            android:inputType="textPassword"
                            android:textColor="#fff" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/Button2"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:onClick="btnGiris"
                        android:text="@string/giris" 
                        />
                    <Button
                        android:id="@+id/Button1"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:onClick="btnKaydol"
                        android:text="@string/kayitol" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>